Добавляет стили к страницам, задает геометрию элементам

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
     </div>
   </header>
   <main>
-    <section class="portfolio">
+    <section class="portfolio section">
       <div class="container">
         <div class="portfolio-container">
           <h1 hidden>Портфолио работ</h1>
@@ -58,50 +58,68 @@
           <ul class="work-examples-list list">
             <li class="work-examples-list-item">
               <img class="work-example-img" src="./images/pic1.jpg" alt="Технокряк">
-              <h2 class="work-examples-list-title">Технокряк</h2>
-              <p class="work-examples-list-text">Веб-сайт</p>
+              <div class="work-example-block"> 
+                <h2 class="work-examples-list-title">Технокряк</h2>
+                <p class="work-examples-list-text">Веб-сайт</p>
+              </div>
               <p hidden class="popup-text">Технокряк это современная площадка распространения коронавируса. Компании
                 используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
             </li>
             <li class="work-examples-list-item">
               <img class="work-example-img" src="./images/pic2.jpg" alt="Постер Нью Орлеан вс Голден Стар">
-              <h2 class="work-examples-list-title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
-              <p class="work-examples-list-text">Дизайн</p>
+              <div class="work-example-block"> 
+                <h2 class="work-examples-list-title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
+                <p class="work-examples-list-text">Дизайн</p>
+              </div>
             </li>
             <li class="work-examples-list-item">
               <img class="work-example-img" src="./images/pic3.jpg" alt="Ресторан Сифуд">
-              <h2 class="work-examples-list-title">Ресторан <span lang="en">Seafood</span> </h2>
-              <p class="work-examples-list-text">Приложение</p>
+              <div class="work-example-block"> 
+                <h2 class="work-examples-list-title">Ресторан <span lang="en">Seafood</span> </h2>
+                <p class="work-examples-list-text">Приложение</p>
+              </div>
             </li>
             <li class="work-examples-list-item">
               <img class="work-example-img" src="./images/pic4.jpg" alt="Проект Прайм">
-              <h2 class="work-examples-list-title">Проект <span lang="en">Prime</span></h2>
-              <p class="work-examples-list-text">Маркетинг</p>
+              <div class="work-example-block"> 
+                <h2 class="work-examples-list-title">Проект <span lang="en">Prime</span></h2>
+                <p class="work-examples-list-text">Маркетинг</p>
+              </div>
             </li>
             <li class="work-examples-list-item">
               <img class="work-example-img" src="./images/pic5.jpg" alt="Проект Боксес">
-              <h2 class="work-examples-list-title">Проект <span lang="en">Boxes</span></h2>
-              <p class="work-examples-list-text">Приложение</p>
+              <div class="work-example-block"> 
+                <h2 class="work-examples-list-title">Проект <span lang="en">Boxes</span></h2>
+                <p class="work-examples-list-text">Приложение</p>
+              </div>
             </li>
             <li class="work-examples-list-item">
               <img class="work-example-img" src="./images/pic6.jpg" alt="Інспірейшн хез ноу бордерс">
-              <h2 class="work-examples-list-title"> <span lang="en">Inspiration has no Borders</span></h2>
-              <p class="work-examples-list-text">Веб-сайт</p>
+              <div class="work-example-block"> 
+               <h2 class="work-examples-list-title"> <span lang="en">Inspiration has no Borders</span></h2>
+               <p class="work-examples-list-text">Веб-сайт</p>
+              </div>
             </li>
             <li class="work-examples-list-item">
               <img class="work-example-img" src="./images/pic7.jpg" alt="Издание Лімітед Едішн">
-              <h2 class="work-examples-list-title">Издание <span lang="en">Limited Edition</span></h2>
-              <p class="work-examples-list-text">Дизайн</p>
+              <div class="work-example-block"> 
+                <h2 class="work-examples-list-title">Издание <span lang="en">Limited Edition</span></h2>
+                <p class="work-examples-list-text">Дизайн</p>
+              </div>
             </li>
             <li class="work-examples-list-item">
               <img class="work-example-img" src="./images/pic8.jpg" alt="Проект ЛАБ">
-              <h2 class="work-examples-list-title">Проект <span lang="en">LAB</span></h2>
-              <p class="work-examples-list-text">Маркетинг</p>
+              <div class="work-example-block"> 
+                <h2 class="work-examples-list-title">Проект <span lang="en">LAB</span></h2>
+                <p class="work-examples-list-text">Маркетинг</p>
+              </div>
             </li>
             <li class="work-examples-list-item">
               <img class="work-example-img" src="./images/pic9.jpg" alt="Гроуінг Бізнес">
-              <h2 class="work-examples-list-title"> <span lang="en">Growing Business</span></h2>
-              <p class="work-examples-list-text">Приложение</p>
+              <div class="work-example-block"> 
+                <h2 class="work-examples-list-title"> <span lang="en">Growing Business</span></h2>
+                <p class="work-examples-list-text">Приложение</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -109,39 +127,37 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="contacts">
-      <a class="logo link" href="./index.html" lang="en"> <span class="logo-first-word">Web</span> Studio</a>
-      <address>
-        <ul class="contact-info list">
+    <div class="footer-container container">
+      <div class="contacts-container">
+        <a class="logo link" href="./index.html" lang="en"><span class="logo-first-word">Web</span> Studio</a>
+        <address>
+          <ul class="contact-info list">
           <li class="contact-info-item">
             <a class="contact-info-address link" href="https://goo.gl/maps/yQj5MutNtVPwPQLq6">
-              г. Киев, пр-т Леси Украинки, 26</a><br>
+            г. Киев, пр-т Леси Украинки, 26</a>
           </li>
-          <li class="contact-info-item">
-            <a class="contact-info-link link" href="mailto:info@devstudio.com">info@devstudio.com</a><br>
+          <li class="contact-info-item"> 
+            <a class="contact-info-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="contact-info-item">
             <a class="contact-info-link link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
+          </ul>
+        </address>
+      </div>
+      <div class="social-links-container">
+        <b class="call">Присоединяйтесь</b>
+        <ul class="social-links-list list">
+          <li class="social-links-item"><a class="social-links-item-link link" href="" aria-label="Ссылка на Instagram"><img src="./images/instagram.svg" alt="Инстаграм"></a></li>
+          <li class="social-links-item"><a class="social-links-item-link link" href="" aria-label="Ссылка на Twitter"><img src="./images/twitter.svg" alt="Твиттер"></a></li>
+          <li class="social-links-item"><a class="social-links-item-link link" href="" aria-label="Ссылка на Facebook"><img src="./images/facebook.svg" alt="Фейсбук"></a></li>
+          <li class="social-links-item"><a class="social-links-item-link link" href="" aria-label="Ссылка на LinkedIn"><img src="./images/linkedIn.svg" alt="Линкедин"></a></li>
         </ul>
-      </address>
-    </div>
-    <div>
-      <b class="call">Присоединяйтесь</b>
-      <ul class="social-links-list">
-        <li class="social-links-item list"><a class="social-links-item-link link" href=""
-            aria-label="Ссылка на Instagram"> Instagram </a></li>
-        <li class="social-links-item list"><a class="social-links-item-link link" href=""
-            aria-label="Ссылка на Twitter">Twitter</a></li>
-        <li class="social-links-item list"><a class="social-links-item-link link" href=""
-            aria-label="Ссылка на Facebook">Facebook</a></li>
-        <li class="social-links-item list"><a class="social-links-item-link link" href=""
-            aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
-      </ul>
-    </div>
-    <div>
-      <b class="call">Подпишитесь на рассылку</b>
-      <button class="modal-btn">Подписаться</button>
+      </div>
+      <div class="call-container">
+        <b class="call">Подпишитесь на рассылку</b>
+        <button class="modal-btn">Подписаться</button>
+      </div>
     </div>
   </footer>
 </body>
