--- a/index.html
+++ b/index.html
@@ -163,20 +163,20 @@
             <p class="position" lang="en">Frontend Developer</p>
             <ul class="social-links-list list">
               <li class="social-links-item">
-                <a class="social-links-item-link link" href="" aria-label="Ссылка на Instagram"><img
-                    src="./images/instagram.svg" alt="Инстаграм" /></a>
+                <a class="social-links-item-link link" href="" aria-label="Ссылка на Instagram">
+                  <img src="./images/instagram.svg" alt="Инстаграм" /></a>
               </li>
               <li class="social-links-item">
-                <a class="social-links-item-link link" href="" aria-label="Ссылка на Twitter"><img
-                    src="./images/twitter.svg" alt="Твиттер" /></a>
+                <a class="social-links-item-link link" href="" aria-label="Ссылка на Twitter">
+                  <img src="./images/twitter.svg" alt="Твиттер" /></a>
               </li>
               <li class="social-links-item">
-                <a class="social-links-item-link link" href="" aria-label="Ссылка на Facebook"><img
-                    src="./images/facebook.svg" alt="Фейсбук" /></a>
+                <a class="social-links-item-link link" href="" aria-label="Ссылка на Facebook">
+                  <img src="./images/facebook.svg" alt="Фейсбук" /></a>
               </li>
               <li class="social-links-item">
-                <a class="social-links-item-link link" href="" aria-label="Ссылка на LinkedIn"><img
-                    src="./images/linkedIn.svg" alt="Линкедин" /></a>
+                <a class="social-links-item-link link" href="" aria-label="Ссылка на LinkedIn">
+                  <img src="./images/linkedIn.svg" alt="Линкедин" /></a>
               </li>
             </ul>
           </li>
