--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <span class="logo-first-word">Web</span> Studio</a>
         <ul class="navigation-list list">
           <li class="navigation-list-item">
-            <a class="navigation-list-link link" href="">Студия</a>
+            <a class="navigation-list-link link" href="./index.html">Студия</a>
           </li>
           <li class="navigation-list-item">
             <a class="navigation-list-link link" href="./portfolio.html">Портфолио</a>
