--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <a class="logo link" href="./index.html" lang="en"> <span class="logo-first-word">Web</span> Studio</a>
         <ul class="navigation-list list">
           <li class="navigation-list-item">
-            <a class="navigation-list-link link" href="">Студия</a></li>
+            <a class="navigation-list-link link" href="./index.html">Студия</a></li>
           <li class="navigation-list-item">
             <a class="navigation-list-link link" href="">Портфолио</a></li>
           <li class="navigation-list-item">
@@ -29,10 +29,10 @@
       <div class="header-contacts">
         <address class="header-address">
           <ul class="address-list list">
-            <li>
+            <li class="address-list-item">
               <a class="header-tel link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li>
+            <li class="address-list-item">
               <a class="header-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
@@ -67,7 +67,7 @@
             <li class="work-examples-list-item">
               <img class="work-example-img" src="./images/pic2.jpg" alt="Постер Нью Орлеан вс Голден Стар">
               <div class="work-example-block"> 
-                <h2 class="work-examples-list-title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
+                <h2 class="work-examples-list-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                 <p class="work-examples-list-text">Дизайн</p>
               </div>
             </li>
